Add Github ribbion

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href="./dist/css/ng-atp.css" rel="stylesheet">
   <link href="example.css" rel="stylesheet">
 </head>
-<body ng-app="myApp">  
+<body ng-app="myApp"> 
+<a href="https://github.com/yiransheng/ngAtp"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a> 
 <div ng-controller="MyCtrl" id="main" class="white-frame">  
   <h3>Angular Autocompleter: ngAtp </h3>
   <p ng-class="{ success : city }"> {{ city }} <span class="close" ng-click="clearCity()">×</span></p>
@@ -20,7 +21,6 @@
   </div>
 </div>
 <div id="readme" class="white-frame">
-<h1 id="ngatp-angular-autocompleter">ngAtp : Angular Autocompleter</h1>
 <h2 id="quick-start">Quick Start</h2>
 <p>Include <code>dist/js/ngAtp-bundle.js</code> or <code>dist/js/ngAtp-bundle.min.js</code> on your page (or use as a bower component).</p>
 <pre><code>&lt;div ng-atp=&quot;city&quot; ng-atp-config=&quot;cityAutocompleteOpts&quot;&gt;
