--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
   <title>ngAtp: Angular Autocompleter</title>
   <script src="../bower_components/lodash/dist/lodash.min.js"></script>
   <script src="../bower_components/angular/angular.min.js"></script>	
-  <script src="../dist/js/ngAtp-bundle.js"></script>
+  <script src="../dist/js/ng-atp-bundle.js"></script>
   <link href="../dist/css/ng-atp.css" rel="stylesheet">
   <link href="example.css" rel="stylesheet">
 </head>
@@ -21,7 +21,7 @@
 </div>
 <script>
 
-var myApp = angular.module('myApp',['ngAtp']);
+var myApp = angular.module('myApp',['ng-atp']);
 function MyCtrl($scope) {
   $scope.clearCity = function() {
     $scope.city = null;
