--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>ngAtp: Angular Autocompleter</title>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.js"></script>	
-  <script src="./dist/js/ngAtp-bundle.js"></script>
+  <script src="./dist/js/ng-atp-bundle.js"></script>
   <link href="./dist/css/ng-atp.css" rel="stylesheet">
   <link href="example.css" rel="stylesheet">
 </head>
@@ -50,7 +50,7 @@ much as possilbe. </p>
 </div>
 <script>
 
-var myApp = angular.module('myApp',['ngAtp']);
+var myApp = angular.module('myApp',['ng-atp']);
 function MyCtrl($scope) {
   $scope.clearCity = function() {
     $scope.city = null;
