--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 <div id="readme" class="white-frame">
 <h2 id="quick-start">Quick Start</h2>
-<p>Include <code ng-non-bindable>dist/js/ngAtp-bundle.js</code> or <code ng-non-bindable>dist/js/ngAtp-bundle.min.js</code> on your page (or use as a bower component).</p>
+<p>Include <code ng-non-bindable>dist/js/ng-atp-bundle.js</code> or <code ng-non-bindable>dist/js/ng-atp-bundle.min.js</code> on your page (or use as a bower component).</p>
 <pre><code ng-non-bindable>&lt;div ng-atp=&quot;city&quot; ng-atp-config=&quot;cityAutocompleteOpts&quot;&gt;
     &lt;input ng-atp-input /&gt;
     &lt;ul ng-atp-suggestions&gt;
