--- a/examples/index.html
+++ b/examples/index.html
@@ -30,16 +30,18 @@ function MyCtrl($scope) {
     console.log(e); 
     console.log(data);
   });
-  $scope.city={ value: "Sigil", id: "1" };
-  $scope.city2={ value: "Amn", id: "2" };
+  $scope.city={ name: "Sigil", key: 12121 };
   $scope.cityAutocompleteOpts = {
     prefetch : 'data.json',
-//    remote : 'http://0.0.0.0:8001/api?q=%QUERY',
+    remote: 'https://graph.facebook.com/search?type=adgeolocation&location_types=city&q=%QUERY',
     verify : function(datum) {
-      return datum && _.has(datum, 'value')
+      return datum && _.has(datum, 'name');
+    },
+    format : function(datum) {
+      return datum ? datum.name : '';   
     },
     limit: 25,
-    clearWhenComplete : true
+    idAttribute : 'key'
   };
 }
 </script>
